#41 - Graph is more proper. #68 - Enhanced 3D models

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -70,13 +70,19 @@
 
             <!-- 3D MODEL -->
             <div class="col-xs-12 col-md-6 hidden-print" id="anionParent"> 
+                <div>
+                    <h4>Anion</h4>
+                </div>
                 <div id="anionMol">  
                     <textarea id="anionMol_src"></textarea>
                 </div>
             </div>
 
 
-            <div class="col-xs-12 col-md-6 hidden-print" id="cationParent"> 
+            <div class="col-xs-12 col-md-6 hidden-print" id="cationParent">
+                <div>
+                    <h4>Cation</h4>
+                </div>
                 <div id="cationMol">  
                     <textarea id="cationMol_src"></textarea>
                 </div>
