--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -39,11 +39,11 @@
         <div class="panel-default visible-print-block">
             <div id ="printingInfo"></div>
         </div>
-        
+
         <div class="panel-default hidden" id="exportParent">
             <div id ="exportInfo"></div>
         </div>
-        
+
         <div class="container1">
 
             <!-- INPUT PARAMETERS -->
@@ -64,8 +64,15 @@
                         </select>
                     </div>
                 </div>
+
                 <h4>or</h4>
-                <input id="cas" type="text" class="form-control" placeholder="Enter a CAS number">
+                <input 
+                    id="selectedCas" type="text" type="text" 
+                    autocomplete="off" data-typeahead-editable="false" 
+                    data-ng-model="selectedCas" 
+                    data-typeahead="cas.number for cas in cas | filter:$viewValue | limitTo:8" 
+                    class="form-control"  placeholder="Enter a CAS number">
+
                 <hr>
                 <select id ="selectCation" class="form-control"  data-width="100%" ng-model="selectedElectrode" ng-options="electrode.label for electrode in electrodes" ng-change="inputChanged();
                                 electrodeChanged()">
