--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -67,10 +67,10 @@
 
                 <h4>or</h4>
                 <div>
-                    <cas-input id="selectedCas" 
+                    <cas-input id="selectedLiquid" 
                               value="myCas" 
-                              value-expr="cas as cas.number for cas in collection" 
-                              collection="cas"
+                              value-expr="liquid as liquid.number for liquid in collection" 
+                              collection="liquids"
                         placeholder="Enter a CAS number">
                                   
                     </cas-input>
