--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -52,14 +52,14 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <select id ="selectAnion" class="form-control" ng-model="selectedAnion" ng-options="anion.label for anion in anions" ng-change="inputChanged();
-                                        anionChanged(); emptifyCas()">
+                                        anionChanged(); emptifyCas(); needToGenerateData()">
                             <option value="" disabled>Select anion</option>
                         </select>
                     </div>
 
                     <div class="col-xs-6">
                         <select id ="selectCation"  class="form-control" data-width="100%" ng-model="selectedCation" ng-options="cation.label for cation in cations" ng-change="inputChanged();
-                                        cationChanged(); emptifyCas()">
+                                        cationChanged(); emptifyCas(); needToGenerateData()">
                             <option value="" disabled>Select cation</option>
                         </select>
                     </div>
@@ -76,8 +76,8 @@
                     </cas-input>
                 </div>
                 <hr>
-                <select id ="selectCation" class="form-control"  data-width="100%" ng-model="selectedElectrode" ng-options="electrode.label for electrode in electrodes" ng-change="inputChanged();
-                                electrodeChanged()">
+                <select id ="selectElectrode" class="form-control"  data-width="100%" ng-model="selectedElectrode" ng-options="electrode.label for electrode in electrodes" ng-change="inputChanged();
+                                electrodeChanged(); needToGenerateData()">
                     <option value="" disabled>Select electrode</option>
                 </select>
             </div>
