--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,15 @@
     background-color:#fcfcfc;
 }
 
+.legend-color-indicator {
+    float: left;
+    width: 20px;
+    height: 20px;
+    margin: 0px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(0,0,0,.2);
+}
 
 .white-background {
     background-color:#ffffff;
