--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -17,7 +17,7 @@
                 <!--</a>-->
                 <a href="">
                     <div>
-                        <div class="btn btn-info btn-lg center-block"  ng-click="exportPDF()"> Export</div>
+                        <div class="btn btn-info btn-lg center-block"  ng-click="export()"> Export</div>
                     </div>
                 </a>
             </div>
