#Cas numbers come from right database

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -70,7 +70,7 @@
                     <cas-input id="selectedLiquid" 
                               value="myCas" 
                               value-expr="liquid as liquid.number for liquid in collection" 
-                              collection="liquids"
+                              collection="ionicliquids"
                         placeholder="Enter a CAS number">
                                   
                     </cas-input>
