HowTo content no longer loaded before clicking on the how to use this app button.

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -5,9 +5,11 @@
         <div>
             <div class="row">
                 <a 
+                    id="howToButton"
                     data-toggle="modal" 
                     data-target="#basicModal" 
-                    class="btn btn-lg btn-info center-block">
+                    class="btn btn-lg btn-info center-block"
+                    ng-click="howToModalClicked()">
                     How to use this app
                 </a>
                 <!--<a ng-click="printTest()">-->
