--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,7 @@
 
 .input-container {
     min-height: 220px;
+    padding-bottom: 5px;
 }
 
 .input-panel {
@@ -48,7 +49,9 @@
     bottom:8px;
 }
 
-
+#caserrormessage h5 {
+    color: #ff0000;
+}
 
 #anionParent {
     width: 172px;
